AnalyseurXML/xml.output
Terminaux qui ne sont utilisés

   EQ
   CLOSESPECIAL
   ENCODING
   NSIDENT
   STARTSPECIAL
   NSEND


Grammaire

    0 $accept: document $end

    1 document: declarations_opt xml_element misc_seq_opt

    2 misc_seq_opt: misc_seq_opt comment
    3             | /* vide */

    4 comment: COMMENT

    5 declarations_opt: declaration
    6                 | /* vide */

    7 declaration: DOCTYPE IDENT IDENT STRING CLOSE

    8 xml_element: start empty_or_content

    9 start: START
   10      | NSSTART

   11 empty_or_content: SLASH CLOSE
   12                 | close_content_and_end CLOSE

   13 close_content_and_end: CLOSE content_opt END

   14 content_opt: content_opt DATA
   15            | content_opt comment
   16            | content_opt xml_element
   17            | /* vide */


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
EQ (258)
SLASH (259) 11
CLOSE (260) 7 11 12 13
CLOSESPECIAL (261)
DOCTYPE (262) 7
ENCODING (263)
STRING (264) 7
DATA (265) 14
COMMENT (266) 4
IDENT (267) 7
NSIDENT (268)
NSSTART (269) 10
START (270) 9
STARTSPECIAL (271)
END (272) 13
NSEND (273)


Non-terminaux, suivis des règles où ils apparaissent

$accept (19)
    à gauche: 0
document (20)
    à gauche: 1, à droite: 0
misc_seq_opt (21)
    à gauche: 2 3, à droite: 1 2
comment (22)
    à gauche: 4, à droite: 2 15
declarations_opt (23)
    à gauche: 5 6, à droite: 1
declaration (24)
    à gauche: 7, à droite: 5
xml_element (25)
    à gauche: 8, à droite: 1 16
start (26)
    à gauche: 9 10, à droite: 8
empty_or_content (27)
    à gauche: 11 12, à droite: 8
close_content_and_end (28)
    à gauche: 13, à droite: 12
content_opt (29)
    à gauche: 14 15 16 17, à droite: 13 14 15 16


état 0

    0 $accept: . document $end

    DOCTYPE  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 6 (declarations_opt)

    document          aller à l'état 2
    declarations_opt  aller à l'état 3
    declaration       aller à l'état 4


état 1

    7 declaration: DOCTYPE . IDENT IDENT STRING CLOSE

    IDENT  décalage et aller à l'état 5


état 2

    0 $accept: document . $end

    $end  décalage et aller à l'état 6


état 3

    1 document: declarations_opt . xml_element misc_seq_opt

    NSSTART  décalage et aller à l'état 7
    START    décalage et aller à l'état 8

    xml_element  aller à l'état 9
    start        aller à l'état 10


état 4

    5 declarations_opt: declaration .

    $défaut  réduction par utilisation de la règle 5 (declarations_opt)


état 5

    7 declaration: DOCTYPE IDENT . IDENT STRING CLOSE

    IDENT  décalage et aller à l'état 11


état 6

    0 $accept: document $end .

    $défaut  accepter


état 7

   10 start: NSSTART .

    $défaut  réduction par utilisation de la règle 10 (start)


état 8

    9 start: START .

    $défaut  réduction par utilisation de la règle 9 (start)


état 9

    1 document: declarations_opt xml_element . misc_seq_opt

    $défaut  réduction par utilisation de la règle 3 (misc_seq_opt)

    misc_seq_opt  aller à l'état 12


état 10

    8 xml_element: start . empty_or_content

    SLASH  décalage et aller à l'état 13
    CLOSE  décalage et aller à l'état 14

    empty_or_content       aller à l'état 15
    close_content_and_end  aller à l'état 16


état 11

    7 declaration: DOCTYPE IDENT IDENT . STRING CLOSE

    STRING  décalage et aller à l'état 17


état 12

    1 document: declarations_opt xml_element misc_seq_opt .
    2 misc_seq_opt: misc_seq_opt . comment

    COMMENT  décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 1 (document)

    comment  aller à l'état 19


état 13

   11 empty_or_content: SLASH . CLOSE

    CLOSE  décalage et aller à l'état 20


état 14

   13 close_content_and_end: CLOSE . content_opt END

    $défaut  réduction par utilisation de la règle 17 (content_opt)

    content_opt  aller à l'état 21


état 15

    8 xml_element: start empty_or_content .

    $défaut  réduction par utilisation de la règle 8 (xml_element)


état 16

   12 empty_or_content: close_content_and_end . CLOSE

    CLOSE  décalage et aller à l'état 22


état 17

    7 declaration: DOCTYPE IDENT IDENT STRING . CLOSE

    CLOSE  décalage et aller à l'état 23


état 18

    4 comment: COMMENT .

    $défaut  réduction par utilisation de la règle 4 (comment)


état 19

    2 misc_seq_opt: misc_seq_opt comment .

    $défaut  réduction par utilisation de la règle 2 (misc_seq_opt)


état 20

   11 empty_or_content: SLASH CLOSE .

    $défaut  réduction par utilisation de la règle 11 (empty_or_content)


état 21

   13 close_content_and_end: CLOSE content_opt . END
   14 content_opt: content_opt . DATA
   15            | content_opt . comment
   16            | content_opt . xml_element

    DATA     décalage et aller à l'état 24
    COMMENT  décalage et aller à l'état 18
    NSSTART  décalage et aller à l'état 7
    START    décalage et aller à l'état 8
    END      décalage et aller à l'état 25

    comment      aller à l'état 26
    xml_element  aller à l'état 27
    start        aller à l'état 10


état 22

   12 empty_or_content: close_content_and_end CLOSE .

    $défaut  réduction par utilisation de la règle 12 (empty_or_content)


état 23

    7 declaration: DOCTYPE IDENT IDENT STRING CLOSE .

    $défaut  réduction par utilisation de la règle 7 (declaration)


état 24

   14 content_opt: content_opt DATA .

    $défaut  réduction par utilisation de la règle 14 (content_opt)


état 25

   13 close_content_and_end: CLOSE content_opt END .

    $défaut  réduction par utilisation de la règle 13 (close_content_and_end)


état 26

   15 content_opt: content_opt comment .

    $défaut  réduction par utilisation de la règle 15 (content_opt)


état 27

   16 content_opt: content_opt xml_element .

    $défaut  réduction par utilisation de la règle 16 (content_opt)
